--- a/LightInTheBox/index.html
+++ b/LightInTheBox/index.html
@@ -11,7 +11,7 @@
 
 
   </head>
-  <body>
+  <body style="background-color: rgb(236, 233, 233);">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
